--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "flask-dev": "FLASK_DEBUG=1 && python -m flask --app api/index run -p 8000 --reload",
+    "next-dev": "next dev",
+    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run flask-dev\"",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+    "start": "next start"
+    },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7",
     "@radix-ui/react-slot": "^1.0.0",
     "class-variance-authority": "^0.7.1",
+    "concurrently": "^9.1.2",
     "framer-motion": "^12.4.2",
+    "next": "15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-    
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
