--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,8 @@
 {
     "functions": {
       "api/index.py": {
-        "runtime": "python@3.12"
+        "runtime": "python@3.12",
+        "handler": "vercel_handler"
       }
     },
     "rewrites": [
