--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "flask-dev": "FLASK_DEBUG=1 && python -m flask --app api/index run -p 8000 --reload",
-    "next-dev": "next dev",
-    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run flask-dev\"",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
-    },
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.0",
     "class-variance-authority": "^0.7.1",
